[package]
name = "school_puppy"
version = "0.1.0"
authors = ["Willi Kappler <grandor@gmx.de>"]
license = "MIT"
repository = "https://github.com/willi-kappler/school_puppy"
description = "Learn application for primary school"
readme = "README.md"
exclude = ["target"]
keywords = ["school", "education"]
categories = ["Education"]
edition = "2018"

[dependencies]
log = "0.4"
log4rs = "0.8"
rustyline = "5.0"
crossterm = "0.13"
rand = "0.7"
chrono = "0.4"

[profile.release]
lto = true
